// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article flag 1`] = `
<View>
  <View />
  <Text
    accessibilityLabel="No Colour Flag"
  >
    no colour
  </Text>
</View>
`;

exports[`2. red article flag 1`] = `
<View>
  <View />
  <Text
    accessibilityLabel="Coloured Red Flag"
  >
    coloured red
  </Text>
</View>
`;

exports[`3. hex colour article flag 1`] = `
<View>
  <View />
  <Text
    accessibilityLabel="Coloured Red Flag"
  >
    coloured red
  </Text>
</View>
`;

exports[`4. rgba colour article flag 1`] = `
<View>
  <View />
  <Text
    accessibilityLabel="Coloured Red Flag"
  >
    coloured red
  </Text>
</View>
`;

exports[`5. new article flag 1`] = `
<View>
  <View />
  <Text
    accessibilityLabel="new Flag"
  >
    new
  </Text>
</View>
`;

exports[`6. updated article flag 1`] = `
<View>
  <View />
  <Text
    accessibilityLabel="updated Flag"
  >
    updated
  </Text>
</View>
`;

exports[`7. exclusive article flag 1`] = `
<View>
  <View />
  <Text
    accessibilityLabel="exclusive Flag"
  >
    exclusive
  </Text>
</View>
`;

exports[`8. sponsored article flag 1`] = `
<View>
  <View />
  <Text
    accessibilityLabel="sponsored Flag"
  >
    sponsored
  </Text>
</View>
`;

exports[`9. long read article flag 1`] = `
<View>
  <View />
  <Text
    accessibilityLabel="long read Flag"
  >
    long read
  </Text>
</View>
`;

exports[`10. article flags 1`] = `
<View>
  <View>
    <View>
      <View />
      <Text
        accessibilityLabel="updated Flag"
      >
        updated
      </Text>
    </View>
  </View>
  <View>
    <View>
      <View />
      <Text
        accessibilityLabel="exclusive Flag"
      >
        exclusive
      </Text>
    </View>
  </View>
  <View>
    <View>
      <View />
      <Text
        accessibilityLabel="long read Flag"
      >
        long read
      </Text>
    </View>
  </View>
</View>
`;

exports[`11. article flags with container 1`] = `
<View>
  <View>
    <View>
      <View>
        <View />
        <Text
          accessibilityLabel="updated Flag"
        >
          updated
        </Text>
      </View>
    </View>
    <View>
      <View>
        <View />
        <Text
          accessibilityLabel="exclusive Flag"
        >
          exclusive
        </Text>
      </View>
    </View>
    <View>
      <View>
        <View />
        <Text
          accessibilityLabel="long read Flag"
        >
          long read
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`12. article flags with no flags 1`] = `null`;
